# legal-tech

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  FRONTEND_IMPLEMENTATION.md  GO_TO_MARKET_PLAN.md  MARKET_ANALYSIS.md  MONETIZATION_IMPLEMENTATION.md  MONETIZATION_PLAN.md  Makefile  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP_GUIDE.md  config.py  dependencies.py  docker-compose.yml  exceptions.py  implementation_plan.md  logger.py  main.py  middleware.py  models.py  pyproject.toml  pytest.ini  quick-start.md  requirements-dev.txt  requirements.txt  supabase_monetization_schema.sql  supabase_sql.sql
.github/workflows/: ci.yml
frontend/: README.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/analyze/: page.tsx
frontend/app/dashboard/api-keys/: page.tsx
frontend/app/dashboard/subscription/: page.tsx
frontend/app/login/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/register/: page.tsx
models/: subscription_models.py
routers/: auth.py  subscriptions.py
services/: auth_service.py  contract_analyzer.py  database.py  document_processor.py  payment_service.py  subscription_service.py
tests/: conftest.py  test_api.py  test_contract_analyzer.py  test_database.py  test_document_processor.py
use-cases/: README.md  use-case-1-midsize-law-firm.md  use-case-2-solo-practitioner.md  use-case-3-corporate-legal-department.md  use-case-4-real-estate-firm.md  use-case-5-litigation-support.md
